--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=config_server
 server.port=8888
 spring.cloud.config.server.git.uri=https://github.com/GeoFoxit/JavaMicroServices_smtrpzConfig
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://eureka:8761/eureka
